src/assets/style/custom.scss
/* ... */
.font-weight-regular {
  font-weight: 300;
}
// .landing-pg > h1 {
//   padding-bottom: 24px;
//   border-bottom: 1px solid #e3e8ee;
// }

.content-wrap {
  @media screen and (max-width: $TABLET_MAX-SIZE) {
    padding-right: 0px;
  }
}

.extra-small-text {
  font-family: inherit;
  font-style: normal;
  font-size: 18px;
  line-height: 28px;
  color: #555555;
  margin: 24px 0;
}

.sidebar-right-container {
  position: fixed;
  right: 0;
  top: 125px;
  bottom: 0;
  width: 265px;
  max-width: 250px;
  padding: 28px 56px;

  @media screen and (max-width: 768px) {
    width: 200px;
  }

  .accordion {
    position: relative;
    .cursor-pointer {
      display: inline;
    }
    .collapse ul,
    .show ul,
    .collapsing ul {
      margin: 0 !important;
    }
  }
}
.sidebar-right-container-extended {
  position: fixed;
  right: 0;
  top: 198px;
  bottom: 0;
  width: 280px;
  max-width: 250px;
  padding: 6px 28px 28px 0px;
  font-family: Helvetica Neue;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  @media screen and (max-width: $TABLET_MAX-SIZE) {
    padding: 28px 28px 28px 0px;
  }
  @media screen and (max-width: $MOBILE_MAX_SIZE) {
    display: none;
  }
  .sidenav-right {
    margin-left: 0;
  }
}

.sidebar-right-container {
  .sidenav-right {
    margin: 0;
  }
  @media screen and (max-width: $MOBILE_MAX_SIZE) {
    display: none;
  }
}

//light colored text for child links in accordions
.accordion-child-link-light {
  font-family: inherit;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  color: #555555;
}

.sidebar-content-dropdown-container {
  padding: 16px 0px 32px 0px;

  .sidebar-container-dropdown-menu {
    width: fit-content;
    max-width: fit-content;
    background: #fff !important;
    height: fit-content;
    min-height: fit-content;
    z-index: 2;
    border-radius: 4px;
    padding: 0px !important;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
    overflow-y: auto;
    @media screen and (max-width: $TABLET_MAX-SIZE) {
      height: fit-content;
    }
    @media screen and (max-width: $MOBILE_MAX_SIZE) {
      width: 90vw;
    }
    @media screen and (max-width: $TABLET_MAX-SIZE) {
      width: 366px;
      max-width: 366px;
    }

    .menu-container {
      padding: 24px 0 24px 24px;
      @media screen and (max-width: $TABLET_MAX-SIZE) {
        padding: 24px 0 0 0;
      }
      @media screen and (max-width: $MOBILE_MAX_SIZE) {
        padding-left: 0;
        padding-right: 0;
      }
      .initial-menu-container {
        @media screen and (max-width: $MOBILE_MAX_SIZE) {
          margin: 0;
          display: flex;
          width: inherit;
          flex-direction: column;
          justify-content: space-between;
          padding: 0;
        }
      }
    }

    @media screen and (max-width: $MOBILE_MAX_SIZE) {
      min-height: 50vh;
      height: 60vh;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .bottom-icon-container {
      display: none;
      @media screen and (max-width: $MOBILE_MAX_SIZE) {
        padding: 12px 0px;
        margin: 0;
        position: relative;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        .icon-container {
          margin-right: 10px;
          a {
            &::before {
              content: "";
              position: absolute;
              top: 0;
              bottom: 0;
              left: 0;
              right: 0;
              opacity: 0.05;
              z-index: 1;
              background: #555555;
            }
          }
        }
      }
    }

    @media screen and (max-width: 321px) {
      transform: translate3d(0px, 40px, 0px) !important;
      overflow: scroll;
    }

    .container {
      // padding: 24px;
      // @media screen and (max-width: $TABLET_MAX-SIZE) {
      //   padding: 0px;
      // }
      .list-item-menu-header {
        padding: 0px 24px 24px 0px;
        font-family: inherit;
        font-style: normal;
        font-weight: 500;
        font-size: 14px;
        line-height: 17px;
        letter-spacing: 1.25px;
        text-transform: uppercase;
        color: #555555;
        @media screen and (max-width: $TABLET_MAX-SIZE) {
          padding: 24px;
        }
        @media screen and (max-width: $MOBILE_MAX_SIZE) {
          width: 100%;
        }
      }
      .list-item-row {
        text-align: left;
        margin: 2px 0;
        width: 100%;
        display: flex !important;
        .list-item-title {
          padding-top: 9px;
          .list-item-title-text {
            font-family: inherit;
            font-style: normal;
            font-weight: 500;
            font-size: 16px;
            line-height: 20px;
            color: #212121;
          }
        }
        .list-item-subtitle {
          margin-top: 6px;
        }
      }
    }
  }
}

.landing-pg-extend-sidebar {
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    display: block;
    padding-right: 265px;
    @media screen and (max-width: $MOBILE_MAX_SIZE) {
      padding-right: 24px;
    }
  }
}
.editor-heading {
  padding: 30px 0px 16px 0;
  border-top: 1px solid #e3e8ee;
  .heading-text {
    text-align: center;
    font-family: inherit;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 22px;
    color: #212121;
    margin-bottom: 16px;
    position: relative;
  }
  .subheading-text {
    text-align: left;
    font-family: inherit;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 20px;
    color: #212121;
  }
}

.next-button,
.prev-button {
  position: absolute;
  top: 0;
  right: 0;
  background-color: transparent;
  outline: none !important;
  border: none;
  display: flex;
  cursor: pointer;
  span {
    font-family: inherit;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 22px;
    color: #212121;
  }
}
/* ... */

